# max30102_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52dk_nrf52810.overlay  nrf52dk_nrf52832.overlay
dts/bindings/: maxim,max30102.yaml
max30102/: CMakeLists.txt  Kconfig  max30102.c  max30102.h  max30102_trigger.c
max30102_module/zephyr/: CMakeLists.txt  Kconfig  module.yml
src/: main.c
